--- a/src/components/navber/navbar.scss
+++ b/src/components/navber/navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
-  width: 290px;
-  height: 100vh;
-  background: #171b2d;
-  border-right: 1.5px solid #262835;
+   width: 290px;
+   height: 100%;
+   background: #171b2d;
+   border-right: 1.5px solid #262835;
 }
