--- a/src/components/navber/navbar.scss
+++ b/src/components/navber/navbar.scss
@@ -1,6 +1,51 @@
 .navbar {
    width: 290px;
    height: 100%;
+   overflow: auto;
    background: #171b2d;
    border-right: 1.5px solid #262835;
+
+   .logo-part {
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+   }
+
+   .menus-part {
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+      padding: 0 30px;
+      padding-top: 20px;
+
+      .menus-part-title {
+         font-weight: 400;
+         font-size: 10px;
+         line-height: 12px;
+         color: #55597D;
+         text-align: left;
+         text-transform: uppercase;
+      }
+
+      .menu {
+         display: flex;
+         align-items: center;
+         gap: 20px;
+         text-decoration: none;
+         color: #ADB3CC;
+         cursor: pointer;
+         transition: all 0.2s;
+         font-size: 14px;
+
+         svg {
+            color: red;
+         }
+
+         &:hover {
+            color: #42BBFF;
+
+         }
+      }
+   }
 }
