--- a/src/components/navber/navbar.scss
+++ b/src/components/navber/navbar.scss
@@ -46,6 +46,20 @@
             color: #42BBFF;
 
          }
+
+         .new {
+            padding: 2px 6px;
+            font-size: 13px;
+            line-height: 16px;
+            letter-spacing: -0.04em;
+            color: #42BBFF;
+            background: #0C3247;
+            border-radius: 26px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            margin-left: auto;
+         }
       }
    }
 }
