--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -2,4 +2,13 @@
   width: calc(100% - 250px);
   height: 100%;
   background: #171b2d;
+  padding: 0 28px 20px;
+
+  &-title {
+    font-weight: 600;
+    font-size: 32px;
+    letter-spacing: -0.02em;
+    color: #ADB3CC;
+    margin-top: 20px;
+  }
 }
