--- a/src/components/performance/performance.scss
+++ b/src/components/performance/performance.scss
@@ -6,6 +6,25 @@
       color: #ADB3CC;
    }
 
+   &-top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .date {
+         display: flex;
+         align-items: center;
+         gap: 10px;
+
+         p {
+            font-size: 10px;
+            line-height: 12px;
+            text-transform: uppercase;
+            color: #55597D;
+         }
+      }
+   }
+
    &-subtitle {
       font-size: 14px;
       line-height: 17px;
@@ -28,8 +47,13 @@
          display: flex;
          flex-direction: column;
          justify-content: space-between;
+         transition: all 0.2s;
 
          &.active {
+            background: #0329E8;
+         }
+
+         &:hover {
             background: #0329E8;
          }
 
@@ -65,6 +89,22 @@
 
          &:first-child {
             background: #0329E8;
+         }
+
+         &:nth-child(2) {
+            .bottom-part {
+               h3 {
+                  color: #00DE73;
+               }
+            }
+         }
+
+         &:nth-child(3) {
+            .bottom-part {
+               h3 {
+                  color: #F21010;
+               }
+            }
          }
       }
 
