--- a/src/components/referring/referring.scss
+++ b/src/components/referring/referring.scss
@@ -1,5 +1,42 @@
 .referring {
    width: 100%;
-   background-color: red;
    height: 400px;
+
+   &-title {
+      font-weight: 600;
+      font-size: 20px;
+      letter-spacing: -0.02em;
+      color: #ADB3CC;
+   }
+
+   &-subtitle {
+      font-size: 14px;
+      line-height: 17px;
+      letter-spacing: -0.02em;
+      color: #585F80;
+   }
+
+   .table {
+      margin-top: 30px;
+
+      thead {
+         td {
+            padding: 5px 10px;
+            font-size: 16px;
+            letter-spacing: -0.02em;
+            color: #55597D;
+         }
+      }
+
+      tbody {
+         td {
+            padding: 5px 10px;
+            font-size: 16px;
+            letter-spacing: -0.02em;
+            color: #ADB3CC;
+
+         }
+      }
+
+   }
 }
